--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/CodeJamboree/replace-tags#readme",
   "devDependencies": {
     "terser-webpack-plugin": "^5.3.10",
+    "ts-loader": "^9.5.1",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   }
