not specifically for secrets

--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   },
   "keywords": [
     "templates",
-    "tags",
-    "secrets"
+    "tags"
   ],
   "author": "Code Jamboree LLC",
   "license": "MIT",
