--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dist-dev"
   ],
   "scripts": {
+    "publish": "npm run update-contributors && npm version patch && npm run build",
     "build": "webpack --mode production",
     "build:dev": "webpack --mode development",
     "update-contributors": "node scripts/update-contributors"
