--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   "contributors": [
     {
       "name": "Lewis Moten",
+      "url": "https://github.com/Lewis-Moten",
       "email": "lewis.moten@codejamboree.com"
     }
   ]
