--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   },
   "homepage": "https://github.com/CodeJamboree/replace-tags#readme",
   "devDependencies": {
+    "jest": "^29.7.0",
     "terser-webpack-plugin": "^5.3.10",
     "ts-loader": "^9.5.1",
     "webpack": "^5.91.0",
