--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "publish": "npm run update-contributors && npm version patch && npm run build",
     "build": "webpack --mode production",
     "build:dev": "webpack --mode development",
+    "test": "jest",
     "update-contributors": "node scripts/update-contributors"
   },
   "repository": {
@@ -58,8 +59,10 @@
   },
   "homepage": "https://github.com/CodeJamboree/replace-tags#readme",
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
     "terser-webpack-plugin": "^5.3.10",
+    "ts-jest": "^29.1.2",
     "ts-loader": "^9.5.1",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
