--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "build": "webpack --mode production",
     "build:dev": "webpack --mode development",
     "test": "jest",
+    "format": "npm run pretty",
+    "pretty": "prettier --write . --list-different --ignore-path .prettierignore",
     "update-contributors": "node scripts/update-contributors"
   },
   "repository": {
@@ -61,6 +63,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
+    "prettier": "^3.2.5",
     "terser-webpack-plugin": "^5.3.10",
     "ts-jest": "^29.1.2",
     "ts-loader": "^9.5.1",
