--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "webpack --mode production",
     "build:dev": "webpack --mode development",
     "test": "jest",
+    "depcheck": "npm-check --unused",
     "lint": "npx eslint src/",
     "format": "npm run pretty",
     "pretty": "prettier --write . --list-different --ignore-path .prettierignore",
@@ -65,6 +66,7 @@
     "@types/jest": "^29.5.12",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
+    "npm-check": "^6.0.1",
     "prettier": "^3.2.5",
     "terser-webpack-plugin": "^5.3.10",
     "ts-jest": "^29.1.2",
