--- a/package.json
+++ b/package.json
@@ -81,6 +81,10 @@
       "name": "Lewis Moten",
       "url": "https://github.com/Lewis-Moten",
       "email": "lewis.moten@codejamboree.com"
+    },
+    {
+      "name": "Lewis Moten",
+      "email": "lewismoten@gmail.com"
     }
   ]
 }
