--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
     "eslint": "^8.57.0",
+    "eslint-plugin-jsdoc": "^48.2.1",
     "jest": "^29.7.0",
     "npm-check": "^6.0.1",
     "prettier": "^3.2.5",
