:white_check_mark:Ignore testing examples by default

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build": "webpack --mode production",
     "build:dev": "webpack --mode development",
     "test": "jest",
+    "test:examples": "TEST_EXAMPLES=true jest",
     "depcheck": "npm-check --unused --ignore @codejamboree/replace-tags",
     "lint": "eslint src",
     "format": "npm run pretty",
